ft:adding field validations
