# src/controllers/queriesController.js
@@ -4,13 +4,21 @@ import { QuerryServices } from '../services/querryServices';
 export class QuerryController {
   async createQuerry(req, res) {
     try {
-      const data = new Querry({
-        email: req.body.email,
-        message: req.body.message,
-      });
-
-      const Querr = await QuerryServices.createQuerry(data);
-      res.status(201).send(Querr);
+      if (!req.body.email) {
+        res.status(404).send({ error: 'enter email' });
+      } else if (!req.body.message) {
+        res.status(404).send({ error: 'enter message' });
+      } else if (!req.body.location) {
+        res.status(404).send({ error: 'enter location' });
+      } else {
+        const data = new Querry({
+          email: req.body.email,
+          message: req.body.message,
+          location: req.body.location,
+        });
+        const Querr = await QuerryServices.createQuerry(data);
+        res.status(201).send(Querr);
+      }
     } catch (error) {
       res.status(204).send({ error: 'no Querry created yet' });
     }
